kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livemech-svc
spec:
  type: ClusterIP
  selector:
    app: livemech
  ports:
    - port: 80
      targetPort: 80
